--- a/package.json
+++ b/package.json
@@ -2,7 +2,7 @@
   "name": "document-upload",
   "version": "0.1.0",
   "private": true,
- "homepage": "http://joedoe.github.io/his-app",
+  "homepage": "http://reneecruz.github.io/document-upload",
   "dependencies": {
     "@testing-library/jest-dom": "^5.17.0",
     "@testing-library/react": "^13.4.0",
