--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "name": "document-upload",
   "version": "0.1.0",
-  "private": true,
+  "private": false,
   "homepage": "http://reneecruz.github.io/document-upload",
   "dependencies": {
     "@testing-library/jest-dom": "^5.17.0",
