--- a/package.json
+++ b/package.json
@@ -2,14 +2,14 @@
   "name": "document-upload",
   "version": "0.1.0",
   "private": false,
-  "homepage": "http://reneecruz.github.io/document-upload",
+  "homepage": "https://reneecruz.github.io/document-upload",
   "dependencies": {
     "@testing-library/jest-dom": "^5.17.0",
     "@testing-library/react": "^13.4.0",
     "@testing-library/user-event": "^13.5.0",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
-    "react-scripts": "^5.0.1",
+    "react-scripts": "^3.0.1",
     "web-vitals": "^2.1.4"
   },
   "scripts": {
